<resources>
    <string name="app_name">UnConvert</string>
    <string name="title">Unit converter</string>
    <string name="tv_from">From</string>
    <string name="tv_to">To</string>
    <string name="from_hint">Enter value</string>
    <string name="to_hint">Enter value</string>
    <string name="calculate_btn">Calculate</string>
    <string-array name="spinnerQuantity">
        <item>Length</item>
        <item>Time</item>
        <item>Weight</item>
        <item>Mass</item>
        <item>Speed</item>
    </string-array>
    <string-array name="spinnerFrom">
    </string-array>
    <string-array name="spinnerTo">
    </string-array>
</resources>